added subpage: kolo-fortuny

--- a/index.html
+++ b/index.html
@@ -1,34 +1,12 @@
 <!DOCTYPE html>
-<html lang="pl-PL">
+<html lang="en">
 <head>
-	<!-- prevent user zomming -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	
-	<link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jan Badtke</title>
 </head>
 <body>
-	<div class="header">
-		<h1>Jak oceniasz ... ?</h1>
-	</div>
-	<div class="horizontal-container">
-		<div class="ocena">
-			<p class="ocena-liczba"></p>
-		</div>
-		<div class="ocena">
-			<p class="ocena-liczba"></p>
-		</div>
-		<div class="ocena">
-			<p class="ocena-liczba"></p>
-		</div>
-		<div class="ocena">
-			<p class="ocena-liczba"></p>
-		</div>
-		<div class="ocena">
-			<p class="ocena-liczba"></p>
-		</div>
-	</div>
-	<!-- <button id="go-to-summary">Podsumowanie</button> -->
-
-	<script src="main.js"></script>
+    <a href="interaktywa-ocena/index.html">Interaktywna ocena</a>
+    <a href="kolo-fortuny/index.html">Koło fortuny</a>
 </body>
 </html>
