added styles to main page, and main page minor changes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Jan Badtke</title>
 </head>
 <body>
-    <a href="interaktywa-ocena/index.html">Interaktywna ocena</a>
-    <a href="kolo-fortuny/index.html">Koło fortuny</a>
+    <div id="main-container">
+        <a href="interaktywa-ocena/index.html">Interaktywna ocena</a>
+        <a href="kolo-fortuny/index.html">Koło fortuny</a>
+    </div>
 </body>
 </html>
