changed interaktywna-ocena lifting

--- a/interaktywa-ocena/index.html
+++ b/interaktywa-ocena/index.html
@@ -12,18 +12,23 @@
 	</div>
 	<div class="horizontal-container">
 		<div class="ocena">
+			<img class="emocja" src="img/1.png">
 			<p class="ocena-liczba"></p>
 		</div>
 		<div class="ocena">
+			<img class="emocja" src="img/2.png">
 			<p class="ocena-liczba"></p>
 		</div>
 		<div class="ocena">
+			<img class="emocja" src="img/3.png">
 			<p class="ocena-liczba"></p>
 		</div>
 		<div class="ocena">
+			<img class="emocja" src="img/4.png">
 			<p class="ocena-liczba"></p>
 		</div>
 		<div class="ocena">
+			<img class="emocja" src="img/5.png">
 			<p class="ocena-liczba"></p>
 		</div>
 	</div>
