--- a/interaktywa-ocena/index.html
+++ b/interaktywa-ocena/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="header">
-		<h1>Jak oceniasz ... ?</h1>
+		<h1>Jak oceniasz naszą szkołę?</h1>
 	</div>
 	<div class="horizontal-container">
 		<div class="ocena">
