added displaying category, with other minor changes

--- a/interaktywa-ocena/index.html
+++ b/interaktywa-ocena/index.html
@@ -6,7 +6,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body id="app" onload="openFullscreen();">
 	<div class="header">
 		<h1>Jak oceniasz naszą szkołę?</h1>
 	</div>
