added <a> to main page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="main-container">
+		<a href="uniwersalny-szablon-liturgii/index.html">uniwersalny-szablon-liturgii</a>
         <a href="interaktywa-ocena/index.html">Interaktywna ocena</a>
         <a href="kolo-fortuny/index.html">Koło fortuny</a>
     </div>
