--- a/kolo-fortuny/index.html
+++ b/kolo-fortuny/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Koło fortuny</title>
+    <title>Koło fortuny - panel sterowania</title>
 </head>
 <body>
     <div id="container">
